--- a/EFI/OC/Kexts/VoodooI2CHID.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/VoodooI2CHID.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>20A5343i</string>
+	<string>19G2021</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -27,19 +27,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>12A8179i</string>
-	<key>DTPlatformName</key>
-	<string>macosx</string>
+	<string>11E708</string>
 	<key>DTPlatformVersion</key>
-	<string>11.0</string>
+	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>16E185</string>
+	<string>19G68</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1200</string>
+	<string>1160</string>
 	<key>DTXcodeBuild</key>
-	<string>12A8179i</string>
+	<string>11E708</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>Intel ACPI Sensor Hub Enabler</key>
@@ -376,7 +374,7 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.12</string>
+	<string>10.11</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017 Alexandre Daoud. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
